added get projects handler
